feat: clase 6 improved

--- a/Seminario/clase6_simple_nn.ipynb
+++ b/Seminario/clase6_simple_nn.ipynb
@@ -48,7 +48,19 @@
     "A eso le aplicamos una función de activación, en este caso la sigmoide.\n",
     "Nos quedaría:\n",
     "$$\n",
-    "output = \\sigma(\\sum_{i=0}^{n} w_{i} x_i)"
+    "output = \\sigma(\\sum_{i=0}^{n} w_{i} x_i)\n",
+    "$$\n",
+    "o de forma vectorial:\n",
+    "$$\n",
+    "\\text{output} = \\sigma\\!\\left(\n",
+    "\\begin{bmatrix}\n",
+    "w_1 & w_2 & \\cdots & w_n\n",
+    "\\end{bmatrix}\n",
+    "\\begin{bmatrix}\n",
+    "x_1 \\\\ x_2 \\\\ \\vdots \\\\ x_n\n",
+    "\\end{bmatrix}\n",
+    "\\right)\n",
+    "$$"
    ]
   },
   {
@@ -67,10 +79,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "weights = None # Completar. Debería ser una matriz columna con 3 filas (una por cada feature)\n",
+    "weights = None # Completar. Debería ser una vector de 3x1 con valores aleatorios. Usar función de numpy\n",
     "\n",
     "def sigmoid(x):\n",
-    "    return None # Completar"
+    "    return None # Completar con la fórmula de la función sigmoide"
    ]
   },
   {
@@ -107,7 +119,7 @@
     "\n",
     "Pasos para mejorar la red neuronal:\n",
     "- Definir una función de pérdida (loss function) para medir qué tan bien lo estamos haciendo.\n",
-    "- Calculo la derivada de la función de pérdida con respecto a los pesos (backpropagation).\n",
+    "- Calculo la derivada de la función de pérdida.\n",
     "Esto es para saber en qué dirección ajustar los pesos (sumo o resto?)\n",
     "- Repito el proceso varias veces (epochs), ajustando los pesos en cada iteración."
    ]
@@ -156,7 +168,7 @@
    "source": [
     "**Consigna:** Hacer este mismo proceso de entrenamiento varias veces (si, es copiar y pegar el codigo de arriba en un for). Cuantas? El número de epochs.\n",
     "\n",
-    "También uardarse los errores en una lista y graficarlas al final para ver como va mejorando la red neuronal!\n",
+    "También guardarse los errores en una lista y graficarlas al final para ver como va mejorando la red neuronal!\n",
     "Recomendación: promediar los errores y tomarles valor absoluto para que no se cancelen entre sí. Esto es solo para graficar mejor\n"
    ]
   },
@@ -270,14 +282,6 @@
    "metadata": {},
    "source": [
     "**Última consigna**: Prueben algunos ejemplos nuevos, que no estén en el dataset original, y vean qué predice la red neuronal "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3b6948e4",
-   "metadata": {},
-   "source": [
-    "**Consigna bastante manija**: Agreguen una capa oculta a la red neuronal."
    ]
   }
  ],
