feat: entrega clase6

--- a/Seminario/clase6_simple_nn.ipynb
+++ b/Seminario/clase6_simple_nn.ipynb
@@ -17,6 +17,8 @@
    "source": [
     "# Simple Neural Network, hagamoslo de cero!\n",
     "\n",
+    "Entrega: https://forms.gle/yNoKFmJhTAfoVnGJ6\n",
+    "\n",
     "Recuerdo: definimos X como la matriz de entradas (features) e Y como la matriz de salidas esperadas (targets)."
    ]
   },
